5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4432/executions/1613_1802.log
== SUBMITION (2019-04-04 18:19:34) 
-- CODE:
form math import *
vida=int(input("pontos de vida inicial do monstro:     "))
d1=int(input("valor do dado sorteado 1:   "))
d2=int(input("valor do dado sorteado 2:    "))
dano+((5*d1)**0.5)+(pi**(D2/3))
dano=int(dano)
vida=vida-dano
print(vida)
-- EXECUTION TIME:
0.214947
-- ERROR:
  File "/home/codebench/codes/1613/1802/main.py", line 1
    form math import *
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 18:20:01) 
-- CODE:
form math import *
vida=int(input("pontos de vida inicial do monstro:     "))
d1=int(input("valor do dado sorteado 1:   "))
d2=int(input("valor do dado sorteado 2:    "))
dano+((5*d1)**0.5)+(pi**(d2/3))
dano=int(dano)
vida=vida-dano
print(vida)
-- EXECUTION TIME:
0.186862
-- ERROR:
  File "/home/codebench/codes/1613/1802/main.py", line 1
    form math import *
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 18:20:03) 
-- CODE:
form math import *
vida=int(input("pontos de vida inicial do monstro:     "))
d1=int(input("valor do dado sorteado 1:   "))
d2=int(input("valor do dado sorteado 2:    "))
dano+((5*d1)**0.5)+(pi**(d2/3))
dano=int(dano)
vida=vida-dano
print(vida)
-- EXECUTION TIME:
0.211416
-- ERROR:
  File "/home/codebench/codes/1613/1802/main.py", line 1
    form math import *
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:20:17) 
-- CODE:
form math import *
vida=int(input("pontos de vida inicial do monstro:     "))
d1=int(input("valor do dado sorteado 1:   "))
d2=int(input("valor do dado sorteado 2:    "))
dano+((5*d1)**0.5)+(pi**(d2/3))
dano=int(dano)
vida=vida-dano
print(vida)
-- ERROR:
File "XXXX", line 1
    form math import *
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 18:20:25) 
-- CODE:
from math import *
vida=int(input("pontos de vida inicial do monstro:     "))
d1=int(input("valor do dado sorteado 1:   "))
d2=int(input("valor do dado sorteado 2:    "))
dano+((5*d1)**0.5)+(pi**(d2/3))
dano=int(dano)
vida=vida-dano
print(vida)
-- EXECUTION TIME:
0.143142
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1613/1802/main.py", line 5, in <module>
    dano+((5*d1)**0.5)+(pi**(d2/3))
NameError: name 'dano' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:20:30) 
-- CODE:
from math import *
vida=int(input("pontos de vida inicial do monstro:     "))
d1=int(input("valor do dado sorteado 1:   "))
d2=int(input("valor do dado sorteado 2:    "))
dano+((5*d1)**0.5)+(pi**(d2/3))
dano=int(dano)
vida=vida-dano
print(vida)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    dano+((5*d1)**0.5)+(pi**(d2/3))
NameError: name 'dano' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 18:20:54) 
-- CODE:
from math import *
vida=int(input("pontos de vida inicial do monstro:     "))
d1=int(input("valor do dado sorteado 1:   "))
d2=int(input("valor do dado sorteado 2:    "))
dano=((5*d1)**0.5)+(pi**(d2/3))
dano=int(dano)
vida=vida-dano
print(vida)
-- EXECUTION TIME:
0.18247
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
188
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
285
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
pontos de vida inicial do monstro:     valor do dado sorteado 1:   valor do dado sorteado 2:    497
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:20:56) 
-- CODE:
from math import *
vida=int(input("pontos de vida inicial do monstro:     "))
d1=int(input("valor do dado sorteado 1:   "))
d2=int(input("valor do dado sorteado 2:    "))
dano=((5*d1)**0.5)+(pi**(d2/3))
dano=int(dano)
vida=vida-dano
print(vida)
-- OUTPUT:
188
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 18:21:13) 
-- CODE:
from math import *
vida=int(input("pontos de vida inicial do monstro:     "))
d1=int(input("valor do dado sorteado 1:   "))
d2=int(input("valor do dado sorteado 2:    "))
dano=((5*d1)**0.5)+(pi**(d2/3))
dano=int(dano)
vida=vida-dano
print(vida)
-- EXECUTION TIME:
0.14858
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
188
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
285
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:21:48) 
-- CODE:
from math import *
vida=int(input("pontos de vida inicial do monstro:     "))
d1=int(input("valor do dado sorteado 1:   "))
d2=int(input("valor do dado sorteado 2:    "))
dano=((5*d1)**0.5)+(pi**(d2/3))
dano=int(dano)
vida=vida-dano
print(vida)
-- OUTPUT:
188
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 19:21:50) 
-- CODE:
from math import *
vida=int(input("pontos de vida inicial do monstro:     "))
d1=int(input("valor do dado sorteado 1:   "))
d2=int(input("valor do dado sorteado 2:    "))
dano=((5*d1)**0.5)+(pi**(d2/3))
dano=int(dano)
vida=vida-dano
print(vida)
-- EXECUTION TIME:
0.220094
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
188
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
285
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
